# milkv-zephyros

./: .gitignore  west.yml
adc/: CMakeLists.txt  prj.conf
adc/boards/: milkv_duo.overlay  milkv_duo256m.overlay
adc/src/: adc.h  main.c  pin.h  timer.h
blinky/: CMakeLists.txt
blinky/boards/: milkv_duo.overlay  milkv_duo256m.overlay
blinky/src/: main.c  resource_table.h  resource_table.ld
drivers/: CMakeLists.txt  Kconfig
drivers/ipm/: CMakeLists.txt  Kconfig
edge-impulse-kws-example/: .gitignore  CMakeLists.txt  prj.conf
edge-impulse-kws-example/noise_unknown_model/model-parameters/: model_metadata.h  model_variables.h
edge-impulse-kws-example/noise_unknown_model/tflite-model/: tflite_learn_3_compiled.cpp  tflite_learn_3_compiled.h
edge-impulse-kws-example/noise_unknown_yes_model/model-parameters/: model_metadata.h  model_variables.h
edge-impulse-kws-example/noise_unknown_yes_model/tflite-model/: tflite_learn_6_compiled.cpp
edge-impulse-kws-example/src/: features.h  features1.h  features2.h  features3.h  main.cpp  timer.h
kws/: CMakeLists.txt  prj.conf
kws/boards/: milkv_duo256m.overlay
kws/kws-mfcc/model-parameters/: model_metadata.h  model_variables.h
kws/kws-mfcc/tflite-model/: tflite_learn_6_compiled.cpp  tflite_learn_6_compiled.h
kws/kws-old/tflite-model/: tflite_learn_6_compiled.h
kws/src/: main.cpp
kws/src/encoding/: encoding.cpp  encoding.h  message.options.in  message.proto
kws/src/hw/: funcs.cpp  funcs.h
kws/src/kws/: kws.cpp  kws.h  noise_features.h  unknown_features.h  yes_features.h
openamp/: milkv_duo.overlay  prj.conf
openamp/boards/: milkv_duo.overlay  milkv_duo256m.overlay
openamp_speed_test/: CMakeLists.txt  prj.conf
openamp_speed_test/src/: main_remote.c
openamp_tf/: CMakeLists.txt  prj.conf
openamp_tf/boards/: milkv_duo.overlay
openamp_tf/src/: encoding.c  encoding.h  main_functions.cpp  main_functions.h  main_remote.c  message.options.in  message.proto  tictactoe.c  tictactoe.h
tf_hello_world/: prj.conf
tf_hello_world/boards/: milkv_duo.overlay
